<resources>
    <string name="app_name">TKG Beacon</string>
    <string name="next">次へ</string>
    <string name="back">戻る</string>
    <string name="student">生徒</string>
    <string name="teacher">先生</string>
    <string name="onboarding_description">多摩科学技術高校のビーコン型位置情報共有アプリ</string>
    <string name="onboarding_get_started">生徒 または 先生 で始める</string>
    <string name="onboarding_get_anonymously_started">匿名で始める（試用モード）</string>
    <string name="onboarding_email_hint">メールアドレスを入力</string>
    <string name="onboarding_email_description">パスワードなしでサインインできるマジックリンクを送信します</string>
    <string name="onboarding_email_send_overview">メールを確認</string>
    <string name="onboarding_email_send_description"> に送信したメールに記載されているリンクをタップしてください</string>
    <string name="onboarding_email_send_launch">メールアプリを起動</string>
    <string name="onboarding_name_hint">名前を入力</string>
    <string name="onboarding_radio_hint">領域・科目を選択</string>
    <string name="region">領域</string>
    <string name="radio_region_IT">IT</string>
    <string name="radio_region_ET">ET</string>
    <string name="radio_region_BT">BT</string>
    <string name="radio_region_NT">NT</string>
    <string name="subject">科目</string>
    <string name="radio_subject_physics">物理</string>
    <string name="radio_subject_science">科学</string>
    <string name="radio_subject_biology">生物</string>
    <string name="radio_subject_math">数学</string>
    <string name="radio_subject_english">英語</string>
    <string name="radio_subject_modern">現文</string>
    <string name="radio_subject_geography">地理</string>
    <string name="radio_subject_pe">体育</string>
    <string name="radio_subject_he">家庭科</string>
    <string name="radio_subject_art">芸術</string>
    <string name="radio_subject_other">その他</string>
    <string name="onboarding_permission_overview">位置情報の許可</string>
    <string name="onboarding_permission_description">ビーコン情報を取得するために位置情報へのアクセスを許可してください</string>
    <string name="onboarding_permission_started">始める</string>
    <string name="title_location">位置情報</string>
    <string name="title_search">見つける</string>
    <string name="title_account">アカウント</string>
    <string name="floor_tab_1F">1F</string>
    <string name="floor_tab_2F">2F</string>
    <string name="floor_tab_3F">3F</string>
    <string name="floor_tab_4F">4F</string>
    <string name="floor_tab_5F">5F</string>
    <string name="people_grid_no_user">周辺にユーザーはいません</string>
    <string name="search_hint">Search people</string>
    <string name="search_filter">検索フィルター</string>
    <string name="search_filter_on">・ON</string>
    <string name="search_filter_off">・OFF</string>
    <string name="preference_logout">ログアウト</string>
    <string name="preference_scan_period">スキャンの間隔</string>
    <string name="preference_disclosure_range">プライバシー設定</string>
    <string name="preference_notice">お知らせ</string>
    <string name="preference_about">このアプリについて</string>
    <string name="preference_send_feedback">フィードバックを送る</string>
    <string name="preference_privacy_policy">プライバシーポリシー</string>
    <string name="preference_oss_license">オープンソースライセンス</string>
    <string name="preference_footer">©2020 sakusaku3939</string>
    <string name="account_setting">プロフィールを編集</string>
    <string name="account_setting_name">名前</string>
    <string name="account_setting_region">領域</string>
    <string name="account_setting_subject">教科</string>
    <string name="account_setting_save">変更を保存</string>
</resources>