<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/region"
        android:textColor="@color/blue_500" />

    <RadioGroup
        android:id="@+id/radioRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioRegionIT"
            style="@style/GridRadioGroup"
            android:checked="true"
            android:text="@string/radio_region_IT" />

        <RadioButton
            android:id="@+id/radioRegionET"
            style="@style/GridRadioGroup"
            android:text="@string/radio_region_ET" />

        <RadioButton
            android:id="@+id/radioRegionBT"
            style="@style/GridRadioGroup"
            android:text="@string/radio_region_BT" />

        <RadioButton
            android:id="@+id/radioRegionNT"
            style="@style/GridRadioGroup"
            android:text="@string/radio_region_NT" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/subject"
        android:textColor="@color/blue_500" />

    <com.sakusaku.beacon.GridRadioGroup
        android:id="@+id/radioSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TableRow>

            <RadioButton
                android:id="@+id/radioSubjectPhysics"
                style="@style/GridRadioGroup"
                android:text="@string/radio_subject_physics" />

            <RadioButton
                android:id="@+id/radioSubjectScience"
                style="@style/GridRadioGroup"
                android:text="@string/radio_subject_science" />

            <RadioButton
                android:id="@+id/radioSubjectBiology"
                style="@style/GridRadioGroup"
                android:text="@string/radio_subject_biology" />

            <RadioButton
                android:id="@+id/radioSubjectMath"
                style="@style/GridRadioGroup"
                android:text="@string/radio_subject_math" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/radioSubjectEnglish"
                style="@style/GridRadioGroup"
                android:text="@string/radio_subject_english" />

            <RadioButton
                android:id="@+id/radioSubjectModern"
                style="@style/GridRadioGroup"
                android:text="@string/radio_subject_modern" />

            <RadioButton
                android:id="@+id/radioSubjectGeography"
                style="@style/GridRadioGroup"
                android:text="@string/radio_subject_geography" />

            <RadioButton
                android:id="@+id/radioSubjectPE"
                style="@style/GridRadioGroup"
                android:text="@string/radio_subject_pe" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/radioSubjectHE"
                style="@style/GridRadioGroup"
                android:text="@string/radio_subject_he" />

            <RadioButton
                android:id="@+id/radioSubjectArt"
                style="@style/GridRadioGroup"
                android:text="@string/radio_subject_art" />

            <RadioButton
                android:id="@+id/radioSubjectOther"
                style="@style/GridRadioGroup"
                android:text="@string/radio_subject_other" />
        </TableRow>
    </com.sakusaku.beacon.GridRadioGroup>
</LinearLayout>