<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/preference_account">
        <PreferenceScreen
            android:key="preference_notice"
            android:title="@string/preference_notice" />

        <PreferenceScreen
            android:key="preference_about"
            android:title="@string/preference_about" />

        <PreferenceScreen
            android:key="preference_send_feedback"
            android:title="@string/preference_send_feedback" />

        <PreferenceScreen
            android:key="preference_privacy_policy"
            android:title="@string/preference_privacy_policy" />

        <PreferenceScreen
            android:key="preference_oss_license"
            android:title="@string/preference_oss_license" />
    </PreferenceCategory>
</PreferenceScreen>