<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.sakusaku.beacon.ui.account.AccountPreference
        android:key="preference_account"
        android:layout="@layout/preference_account"
        android:summary="loading..."
        android:title="undefined" />

    <PreferenceScreen
        android:layout="@layout/preference_diver"
        android:selectable="false" />

    <ListPreference
        android:defaultValue="短い"
        android:entries="@array/array_preference_scan_period"
        android:entryValues="@array/array_preference_scan_period"
        android:key="preference_scan_period"
        android:layout="@layout/custom_preference"
        android:title="@string/preference_scan_period"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:defaultValue="全体に公開"
        android:entries="@array/array_preference_disclosure_range"
        android:entryValues="@array/array_preference_disclosure_range"
        android:key="preference_disclosure_range"
        android:layout="@layout/custom_preference"
        android:title="@string/preference_disclosure_range"
        app:useSimpleSummaryProvider="true" />

    <PreferenceScreen
        android:layout="@layout/preference_diver"
        android:selectable="false" />

    <PreferenceScreen
        android:key="preference_notice"
        android:layout="@layout/custom_preference"
        android:title="@string/preference_notice" />

    <PreferenceScreen
        android:key="preference_about"
        android:layout="@layout/custom_preference"
        android:title="@string/preference_about" />

    <PreferenceScreen
        android:key="preference_send_feedback"
        android:layout="@layout/custom_preference"
        android:title="@string/preference_send_feedback" />

    <PreferenceScreen
        android:key="preference_privacy_policy"
        android:layout="@layout/custom_preference"
        android:title="@string/preference_privacy_policy" />

    <PreferenceScreen
        android:key="preference_oss_license"
        android:layout="@layout/custom_preference"
        android:title="@string/preference_oss_license" />

    <PreferenceScreen
        android:layout="@layout/preference_footer"
        android:selectable="false" />
</PreferenceScreen>