<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/locationScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbars="none">

                <RadioGroup
                    android:id="@+id/floorTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp">

                    <RadioButton
                        android:id="@+id/floorTab1F"
                        style="@style/FloorTab"
                        android:checked="true"
                        android:text="@string/floor_tab_1F" />

                    <RadioButton
                        android:id="@+id/floorTab2F"
                        style="@style/FloorTab"
                        android:text="@string/floor_tab_2F" />

                    <RadioButton
                        android:id="@+id/floorTab3F"
                        style="@style/FloorTab"
                        android:text="@string/floor_tab_3F" />

                    <RadioButton
                        android:id="@+id/floorTab4F"
                        style="@style/FloorTab"
                        android:text="@string/floor_tab_4F" />

                    <RadioButton
                        android:id="@+id/floorTab5F"
                        style="@style/FloorTab"
                        android:text="@string/floor_tab_5F" />
                </RadioGroup>
            </HorizontalScrollView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/floorMapImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/school_map_1f" />

                <FrameLayout
                    android:id="@+id/mapPinLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

<!--                <include-->
<!--                    android:id="@+id/mapPin"-->
<!--                    layout="@layout/map_pin"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_width="64dp"-->
<!--                    android:layout_height="64dp" />-->

<!--                <com.skyfishjy.library.RippleBackground-->
<!--                    android:id="@+id/mapPinRipple"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="96dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:alpha="0.7"-->
<!--                    app:rb_color="@color/blue_500"-->
<!--                    app:rb_duration="3000"-->
<!--                    app:rb_radius="8dp"-->
<!--                    app:rb_rippleAmount="2"-->
<!--                    app:rb_scale="4" />-->

<!--                <View-->
<!--                    android:id="@+id/mapPin"-->
<!--                    android:layout_width="24dp"-->
<!--                    android:layout_height="24dp"-->
<!--                    android:visibility="gone"-->
<!--                    android:background="@drawable/location_marker" />-->
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/teacher"
                android:textColor="@color/blue_500"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/teacherPeopleGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:overScrollMode="never" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/student"
                android:textColor="@color/blue_500"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/studentPeopleGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:overScrollMode="never" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <be.rijckaert.tim.animatedvector.FloatingMusicActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:backgroundTint="@color/blue_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:mode="playToPause" />
</androidx.constraintlayout.widget.ConstraintLayout>
